objects/Physical_Therapy_Session__c.object
<CustomObject>
    <description>A custom object to track physical therapy sessions.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Physical Therapy Sessions</relationshipLabel>
        <relationshipName>Physical_Therapy_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Visible_on_Patient_Card__c</fullName>
        <formula>NOT(ISBLANK(Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Visible on Patient Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Therapy_Type__c</fullName>
        <label>Therapy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Joint Pain</fullName>
                </value>
                <value>
                    <fullName>Spinal Injury</fullName>
                </value>
                <value>
                    <fullName>Post-Operative Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Physical Therapy Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Physical Therapy Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physical Therapy Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>